--- a/bab/4-hasil-pembahasan.tex
+++ b/bab/4-hasil-pembahasan.tex
@@ -1,17 +1,11 @@
-\chapter{PENGUJIAN DAN ANALISIS}
-\label{chap:pengujiananalisis}
+\chapter{HASIL DAN PEMBAHASAN}
+\label{chap:hasil-pembahasan}
 
-% Ubah bagian-bagian berikut dengan isi dari pengujian dan analisis
+\section{Hasil Implementasi}
+\label{sec:hasil-implementasi}
 
-Pada penelitian ini dipaparkan
-
-\section{Skenario Pengujian}
-\label{sec:skenariopengujian}
-
-Pengujian dilakukan dengan
-
-\section{Evaluasi Pengujian}
-\label{sec:analisispengujian}
+\section{Pembahasan}
+\label{sec:pembahasan}
 
 Dari pengujian yang
 
