--- a/bab/5-penutup.tex
+++ b/bab/5-penutup.tex
@@ -1,7 +1,5 @@
-\chapter{PENUTUP}
+\chapter{KESIMPULAN DAN SARAN}
 \label{chap:penutup}
-
-% Ubah bagian-bagian berikut dengan isi dari penutup
 
 \section{Kesimpulan}
 \label{sec:kesimpulan}
