--- a/lainnya/biografi-penulis.tex
+++ b/lainnya/biografi-penulis.tex
@@ -1,7 +1,4 @@
-\begin{center}
-  \Large
-  \textbf{BIOGRAFI PENULIS}
-\end{center}
+\chapter*{BIOGRAFI PENULIS}
 
 \addcontentsline{toc}{chapter}{BIOGRAFI PENULIS}
 
