--- a/lainnya/kata-pengantar.tex
+++ b/lainnya/kata-pengantar.tex
@@ -1,7 +1,4 @@
-\begin{center}
-  \Large
-  \textbf{KATA PENGANTAR}
-\end{center}
+\chapter*{LEMBAR PENGESAHAN}
 
 \addcontentsline{toc}{chapter}{KATA PENGANTAR}
 
