--- a/lainnya/lembar-pengesahan.tex
+++ b/lainnya/lembar-pengesahan.tex
@@ -1,7 +1,4 @@
-\begin{center}
-  \large
-  \textbf{LEMBAR PENGESAHAN}
-\end{center}
+\chapter*{LEMBAR PENGESAHAN}
 
 \addcontentsline{toc}{chapter}{LEMBAR PENGESAHAN}
 
