--- a/lainnya/pernyataan-keaslian.tex
+++ b/lainnya/pernyataan-keaslian.tex
@@ -1,7 +1,4 @@
-\begin{center}
-  \large
-  \textbf{PERNYATAAN ORISINALITAS}
-\end{center}
+\chapter*{PERNYATAAN ORISINALITAS}
 
 \addcontentsline{toc}{chapter}{PERNYATAAN ORISINALITAS}
 
